Fix compilation error in SimpleTest: replaced getFirst() with get(0)